--- a/config/variants/default-cm/README
+++ b/config/variants/default-cm/README
@@ -5,3 +5,15 @@ building the manifests ("made manifests" in the root directory).
 
 As of March 2022, I (aludwin@google.com) have not actually tested this to see if
 it works.
+
+If/when we next need to use CRD conversion webhooks, add the following patches
+to this directory:
+
+# The following patch adds a directive for certmanager to inject CA into the CRD
+# CRD conversion requires k8s 1.13 or later.
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
+  name: hierarchies.hnc.x-k8s.io
